Add Login endpoint

--- a/Warehouse/appsettings.Development.json
+++ b/Warehouse/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SecretKey": "your_super_secret_key_1234567890"
 }
