--- a/Warehouse/appsettings.json
+++ b/Warehouse/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=localhost,1433;Database=master;User Id=sa;Password=Password_123#;TrustServerCertificate=True;"
-  }
+  },
+  "SecretKey": "your_super_secret_key_1234567890"
 }
